WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88019
[BlackBerry] browser video player fullscreen mode (portrait) - out of screen/focus - cannot navigate or use the buttons on the screen
https://bugs.webkit.org/show_bug.cgi?id=88019
Summary
[BlackBerry] browser video player fullscreen mode (portrait) - out of screen/...
Antonio Gomes
Reported
2012-05-31 15:40:56 PDT
BUG REPORT FROM PRZILLA: If you use the browser video player (tested through Youtube), if you full screen the video, the window frame is totally out of focus. Half of the video screen cannot be seen and the buttons (restore button, scroll bar) cannot be used either. The only way to restore the video screen is by letting the video finish or by closing the application. Steps to Reproduce: * Open up the browser. * Click on the Youtube bookmark (the browser comes with these bookmarks). * Choose a video to drill down to the video play back page. * Enter the play button on top of the video player/thumbnail to start playback. * After the playback starts, click on the "full screen" button (on the bottom right of the video player window,) to maximize the video player screen size (this button is the square-ish button) Expected Results: * After the "full screen" button is pressed, the user should be able to see the full screen of the video player (even if it is scaled down, or up, in any of the dimensions). * The user should be able to access the "restore window" button somehow and be able to use the "progress bar" somehow. Actual Results: * about 40 to 50% of the video screen is obscured from the user (that is, it is not centred and aligned correctly) * The "restore window" button is accessible. * the progress bar is not accessible. * the only way the screen restores back is when the entire video playback is finished.
Attachments
patch1/3
(5.50 KB, patch)
2012-05-31 21:08 PDT
,
Antonio Gomes
staikos
: review+
Details
Formatted Diff
Diff
patch 2/3
(4.19 KB, patch)
2012-05-31 21:09 PDT
,
Antonio Gomes
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-05-31 21:08:50 PDT
Created
attachment 145206
[details]
patch1/3
Antonio Gomes
Comment 2
2012-05-31 21:09:18 PDT
Created
attachment 145207
[details]
patch 2/3
Antonio Gomes
Comment 3
2012-06-02 07:53:40 PDT
Fixed by
r119320
,
r119321
and
r119322
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug